# Transfory

./: .gitignore  LICENSE  README.md  README_new.md  USAGE.md  interactive_test.ipynb  pyproject.toml  requirements.txt  test.py  trained_transfory_pipeline.joblib
Transfory/: __init__.py  base.py  column_transformer.py  datetime.py  encoder.py  exceptions.py  featuregen.py  imputation.py  insight.py  missing.py  outlier.py  pipeline.py  scaler.py
demo/: challenging_messy_dataset.csv  demo1_basic_pipeline.ipynb  demo2_column_transformer.ipynb  demo3_feature_engineering.ipynb  demo4_outlier_handling.ipynb  demo_full_workflow.ipynb
docs/: api_reference.md  exasmples.md  index.md
docs/api_reference/: api_base.md  api_encoder.md  api_featuregen.md  api_missing.md
examples/: demo.py  demo2.py  demo3.py  demo_exceptions.ipynb  encoder.ipynb  featuregen.ipynb  missing.ipynb  pipeline.ipynb  report.ipynb  scaler.ipynb
tests/: fulltest.py  test_base.py  test_column_transformer.py  test_datetime.py  test_encoder.py  test_exceptions.py  test_insight.py  test_insight_reporter.py  test_integration.py  test_outlier.py  test_pipeline.py  test_scaler.py
