[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transfory"
version = "0.0.1"
description = "An Object-Oriented Data Transformation Toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pandas", "numpy", "scikit-learn", "joblib"]