[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transfory"
version = "0.0.1"
authors = [
  { name="MCQYP", email="mandamian.rogelioiii@gmail.com" },
]
description = "An Object-Oriented Data Transformation Toolkit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["pandas", "numpy", "scikit-learn", "joblib"]

[project.urls]
"Homepage" = "https://github.com/Troge-dev/transfory"
"Bug Tracker" = "https://github.com/Troge-dev/transfory/issues"